Revision history for Dist-Zilla-Plugins-CJM

Note: the version number of a plugin is the version of the dist in
which it was last changed.

4.11   NOT
	Dist::Zilla::Plugin::MakeMaker::Custom
	  - expand SYNOPSIS to show more complete example

4.10   August 3, 2012
	Dist::Zilla::Plugin::TemplateCJM
	  - normalize Perl version in dependency_list
	  - remove leading "v" from versions in dependency_list

4.09   June 4, 2012
	Dist::Zilla::Plugin::TemplateCJM
	  - add report_versions parameter

4.08   April 28, 2012
	- no functional changes in this release, just improved docs

	Dist::Zilla::Plugin::MakeMaker::Custom
	  - document how it compares to the MakeMaker::Awesome plugin

4.07   February 22, 2012
	Dist::Zilla::Plugin::MakeMaker::Custom
	  - now compatible with (and requires) Dist::Zilla 4.300009
	    %share_dir_code replaces @share_dir_block in templates
	  - fix typo in documentation

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - fix typo in documentation

4.06   January 2, 2012
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - use CPAN::Meta::Requirements (new name of Version::Requirements)

4.05   December 21, 2011
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - Filter runtime recommendations out of test recommendations

4.04   December 12, 2011
	Dist::Zilla::Plugin::Test::PrereqsFromMeta
	  - New plugin

4.03   November 11, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Add :IncModules & :ExecFiles to default finders

	Dist::Zilla::Plugin::MakeMaker::Custom
	  - New plugin

	Dist::Zilla::Role::HashDumper
	  - New role

4.02   November 3, 2011
	- Fixed the bogus failures in gitvercheck.t
	- No changes to plugins

4.01   November 2, 2011
	- Fixed buggy diagnostics in gitvercheck.t
	- No changes to plugins

4.00   November 1, 2011
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - New plugin

	Dist::Zilla::Plugin::TemplateCJM
	  - Add changelog_re parameter

	- Tests now use Test::DZil

3.05   May 5, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM